# BI_mvp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  run_projects.ps1
backend_django/: .pylintrc  Dockerfile  README.md  entrypoint.sh  manage.py  print_apps.py  requirements.txt  test_db.py
backend_django/app_kpis/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend_django/app_kpis/migrations/: 0001_initial.py  0002_alter_sale_table.py  0003_customermetrics_shop_shopmetrics.py  0004_alter_sale_options_alter_sale_shop_alter_sale_table.py  0005_sync_shop_with_db.py  0006_alter_shop_location_alter_shop_name_and_more.py
backend_django/core/: asgi.py  settings.py  urls.py  wsgi.py
fastapi_ml/: .pylintrc  Dockerfile  __init__.py  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt  setup.py  show_tree.py  test_api.ps1  test_db.py
fastapi_ml/app/: __init__.py  config.py  database.py  django_client.py  logger.py  main.py
fastapi_ml/app/api/: router.py
fastapi_ml/app/api/v1/: __init__.py  health.py  ml.py
fastapi_ml/app/api/v1/endpoints/: health.py  ml.py  sales.py
fastapi_ml/app/api/v1/routes/: __init__.py
fastapi_ml/app/models/: __init__.py  kpis.py  ml.py
fastapi_ml/app/schemas/: __init__.py  kpis.py
fastapi_ml/app/services/: data_processing.py  features.py  ml_service.py
fastapi_ml/model_store/: sales_prophet.pkl
fastapi_ml/models_store/: model.pkl
frontend_streamlit/: Dockerfile  app.py  requirements.txt
frontend_streamlit/utils/: api_client.py  charts.py  metrics.py
infra/: .env.example  docker-compose.yml  docker-compose.yml.backup  docker-up.ps1
(+3 files in other folders)
